--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -37,13 +37,15 @@ jobs:
         with:
           fetch-depth: 0
 
-      # Requirement for GitVersion.
-      # This step ensure current commit exists on a branch.
-      # Its not the case when a workflow is triggered by a pull request coming from a fork.
-      # These commits only exists in a ref that isn't associated to any branch.
-      - name: Create branch on pull request from fork
-        if: github.event_name == 'pull_request' && github.event.pull_request.head.repo.fork
-        run: git checkout -b ${{ github.ref_name }}
+      # - name: Install GitVersion
+      #   uses: gittools/actions/gitversion/setup@v0.10.2
+      #   with:
+      #     versionSpec: '5.12.0'
+
+      # - name: Determine Version
+      #   uses: gittools/actions/gitversion/execute@v0.10.2
+      #   with:
+      #     useConfigFile: true
 
       - name: Build Sharpmake ${{ inputs.configuration }} ${{ inputs.os }}
         shell: pwsh
