Restore GitVersion normalization
- Enable no fetch option. Should prevent errors related to repository changing state while GitVersion performs its normalization. Has been occasionally seen on GitLab when current pipeline branch was being rebased.
- Added -output buildserver command line argument to GitVersion when run in CI. Provides additional GitVersion logging.

--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -31,7 +31,9 @@
     <PackageReadmeFile>README.md</PackageReadmeFile>
 
     <!-- GitVersion -->
-    <GitVersion_NoNormalizeEnabled>true</GitVersion_NoNormalizeEnabled>
+    <GitVersion_NoFetchEnabled >true</GitVersion_NoFetchEnabled >
+    <GitVersion_NoNormalizeEnabled>false</GitVersion_NoNormalizeEnabled>
+    <GitVersion_CommandLineArguments Condition="$(ContinuousIntegrationBuild) == 'true'">-output buildserver</GitVersion_CommandLineArguments>
   </PropertyGroup>
 
   <ItemGroup>
