Migrate Linux sample into a container app
It use Docker to build and run the sample and is based on official images. This provide the same execution environment on both GitHub and GitLab.

--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -167,7 +167,8 @@ jobs:
         if: runner.os == 'Linux'
         shell: pwsh
         run: |
-          ./RunSample.ps1 -sampleName "HelloLinux" -configuration ${{ matrix.configuration }} -framework ${{ matrix.framework }}
+          docker build -f samples/HelloLinux/Dockerfile -t sharpmake-hellolinux --build-arg CONFIGURATION=${{ matrix.configuration }} --build-arg FRAMEWORK=${{ matrix.framework }} .
+          docker run --rm sharpmake-hellolinux
 
       - name: HelloWorld ${{ matrix.configuration }} ${{ matrix.os }}
         if: runner.os == 'Windows'
