Fixed error MSB4057: The target "GitVersion" does not exist in the project.

--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -1,5 +1,7 @@
 <Project>
-
+  <!-- To be redefined by GitInfo after restore. -->
+  <Target Name="GitVersion" />
+  
   <PropertyGroup>
     <!-- Assembly Info -->
     <Company>Ubisoft</Company>
