--- a/.gitlab/.gitlab-ci.yml
+++ b/.gitlab/.gitlab-ci.yml
@@ -11,13 +11,6 @@ default:
   tags:
   - square_windows
 
-# Install .NET SDK version compatible with GitInfo.
-# Workaround until .NET SDK installed on square_windows is updated.
-.dotnet_sdk_workaround:
-  before_script:
-    - pwsh -Command { Invoke-WebRequest https://dotnet.microsoft.com/download/dotnet/scripts/v1/dotnet-install.ps1 -OutFile dotnet-install.ps1 -MaximumRetryCount 3 }
-    - .\dotnet-install.ps1 -Version 6.0.408
-
 #############
 # Stage Build: compile sharpmake solution on all targets, keep the binaries for further steps.
 
@@ -37,9 +30,7 @@ default:
     expire_in: 1 day
 
 compilation:windows:
-  extends:
-    - .compilation:base
-    - .dotnet_sdk_workaround
+  extends: .compilation:base
 
 compilation:mac:
   extends: .compilation:base
@@ -54,7 +45,6 @@ compilation:linux:
 # Unit tests
 #############
 .unit_test:base:
-  extends: .dotnet_sdk_workaround
   stage: test
   script:
     - dotnet test Sharpmake.sln -c $configuration
