--- a/Sharpmake.UnitTests/Sharpmake.UnitTests.csproj
+++ b/Sharpmake.UnitTests/Sharpmake.UnitTests.csproj
@@ -2,18 +2,22 @@
 <Project>
   <Import Project="Sdk.props" Sdk="Microsoft.NET.Sdk" />
 
+  <PropertyGroup>
+    <IsTestProject>true</IsTestProject>
+  </PropertyGroup>
+
   <ItemGroup>
     <ProjectReference Include="..\Sharpmake.Generators\Sharpmake.Generators.csproj" />
     <ProjectReference Include="..\Sharpmake.Platforms\Sharpmake.CommonPlatforms\Sharpmake.CommonPlatforms.csproj" />
     <ProjectReference Include="..\Sharpmake\Sharpmake.csproj" />
   </ItemGroup>
-  
+
   <ItemGroup>
     <PackageReference Include="NUnit3TestAdapter" Version="4.1.0" />
     <PackageReference Include="NUnit" Version="3.13.2" />
     <PackageReference Include="NUnit.Console" Version="3.12.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.0.0" />
   </ItemGroup>
-  
+
   <Import Project="Sdk.targets" Sdk="Microsoft.NET.Sdk" />
 </Project>
