--- a/.gitlab/.gitlab-ci.yml
+++ b/.gitlab/.gitlab-ci.yml
@@ -114,8 +114,29 @@ functional_test:
 HelloLinux:
   extends: .linux_sample_test
   script:
-    - docker build -f samples/HelloLinux/Dockerfile -t sharpmake-hellolinux --build-arg CONFIGURATION=$configuration --build-arg FRAMEWORK=$framework .
-    - docker run --rm sharpmake-hellolinux
+    # Install Powershell on Alpine (https://learn.microsoft.com/en-us/powershell/scripting/install/install-alpine?view=powershell-7.2)
+    - apk add --no-cache
+        ca-certificates
+        less
+        ncurses-terminfo-base
+        krb5-libs
+        libgcc
+        libintl
+        libssl1.1
+        libstdc++
+        tzdata
+        userspace-rcu
+        zlib
+        icu-libs
+        curl
+    - apk -X https://dl-cdn.alpinelinux.org/alpine/edge/main add --no-cache lttng-ust
+    - curl -L https://github.com/PowerShell/PowerShell/releases/download/v7.2.11/powershell-7.2.11-linux-alpine-x64.tar.gz -o /tmp/powershell.tar.gz
+    - mkdir -p /opt/microsoft/powershell/7
+    - tar zxf /tmp/powershell.tar.gz -C /opt/microsoft/powershell/7
+    - chmod +x /opt/microsoft/powershell/7/pwsh
+    - ln -s /opt/microsoft/powershell/7/pwsh /usr/bin/pwsh
+    # Run HelloLinux sample
+    - pwsh ./RunSample.ps1 -sampleName HelloLinux -configuration $configuration
 
 #############
 # MacOs Sample tests
@@ -308,14 +329,8 @@ PackageReferences:
 
 QTFileCustomBuild:
   extends: .windows_sample_test
-  variables:
-    Qt_BaseDir: "$CI_PROJECT_DIR\\Qt"
-    Qt5_Dir: "$Qt_BaseDir\\5.15.2\\msvc2019_64" # Needed by sample to build Qt paths.
   before_script:
   - choco install python3 --version 3.10.6 --side-by-side -y --no-progress
-  - py -m pip install aqtinstall
-  - py -m aqt install-qt windows desktop 5.15.2 win64_msvc2019_64 --archives qtbase qttools --outputdir ${env:Qt_BaseDir}
-  - $Env:PATH = "${env:Qt5_Dir}\bin;" + $Env:PATH # Needed by sample executable to locate Qt DLLs.
   script:
   - pwsh RunSample.ps1 -sampleName "QTFileCustomBuild" -configuration $configuration -framework $framework -os $os
 
