--- a/samples/HelloLinux/Dockerfile
+++ b/samples/HelloLinux/Dockerfile
@@ -30,14 +30,12 @@ RUN make -f HelloLinux_linux_make.make config=$CONFIGURATION
 
 # Last stage is the container app that will executed.
 # Its based on PowerShell image and contains binaries and scripts required to execute HelloLinux sample.
-FROM mcr.microsoft.com/powershell:lts-7.2-debian-11
+FROM debian:bullseye
 
-COPY RunSample.ps1 SamplesDef.json ./
 COPY --from=compiler-env samples/HelloLinux samples/HelloLinux
 
 ARG CONFIGURATION=release
-ARG FRAMEWORK=net6.0
 
 # Running the resulting container app execute the sample.
-ENV RUN_SAMPLE_CMD="pwsh ./RunSample.ps1 -sampleName HelloLinux -configuration $CONFIGURATION -framework $FRAMEWORK"
+ENV RUN_SAMPLE_CMD="./samples/HelloLinux/codebase/temp/bin/linux_$CONFIGURATION/exe"
 CMD $RUN_SAMPLE_CMD
