XCode Sample projects
This MR constitutes a contribution of several sample projects for XCode, Mac and IOS development,
that demonstrate the peculiarities,
as well as the new features introduced specifically for XCode.

--- a/.gitlab/.gitlab-ci.yml
+++ b/.gitlab/.gitlab-ci.yml
@@ -141,6 +141,11 @@ HelloXCode:
   script:
   - pwsh ./RunSample.ps1 -sampleName HelloXCode -configuration $configuration -framework $framework
 
+XCodeProjects:
+  extends: .macos_sample_test
+  script:
+  - pwsh ./RunSample.ps1 -sampleName XCodeProjects -configuration $configuration -framework $framework
+
 #############
 # Windows Sample tests
 #############
