--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -39,7 +39,7 @@ jobs:
 
       - name: 'Generating changelog'
         shell: pwsh
-        run: .\Get-Changelog.ps1 ${{ github.ref_name }} > changelog.md
+        run: .github\Get-Changelog.ps1 ${{ github.ref_name }} > changelog.md
 
       - name: 'Download workflow artifacts'
         uses: actions/download-artifact@v3
